testsuite/poke.pkl/char-diag-2.pk
/* { dg-do compile } */

defvar foo = ''; /* { dg-error "" } */
